--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,13 @@ pandas>=1.4.0
 numpy>=1.22.0
 scikit-learn>=1.0.0
 openpyxl>=3.0.0
-matplotlib>=3.5.0  # Optional for visualization
+matplotlib>=3.5.0
+streamlit>=1.22.0
+plotly>=5.10.0
+seaborn>=0.12.0
+shap>=0.41.0
+streamlit-option-menu>=0.3.2
+py3Dmol>=2.0.0
+stmol>=0.0.9
+streamlit-shap>=1.0.2
+ipywidgets>=7.6.3
