--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ fastapi==0.104.1
 streamlit>=1.24.0
 pandas==2.1.4
 scikit-learn==1.3.2
-matplotlib==3.8.2
 plotly==5.18.0
 xgboost==2.0.3
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 uvicorn==0.24.0
 numpy==1.26.2
 geopy==2.4.1
 pymongo==4.6.1
 pytest==8.0.0
+numpy>=1.22.0
+openpyxl>=3.0.0
+matplotlib>=3.5.0  
+requests>=2.28.0
