--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ numpy>=1.22.0
 scikit-learn>=1.0.0
 openpyxl>=3.0.0
 matplotlib>=3.5.0
-streamlit>=1.22.0
-plotly>=5.10.0
-seaborn>=0.12.0
-shap>=0.41.0
+streamlit>=1.28.0
 streamlit-option-menu>=0.3.2
-py3Dmol>=2.0.0
-stmol>=0.0.9
+plotly>=5.13.0
+shap>=0.42.0
+py3Dmol>=1.8.0
 streamlit-shap>=1.0.2
-ipywidgets>=7.6.3
+stmol>=0.0.9
+seaborn>=0.12.2
+joblib>=1.2.0
